# petra

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: bitacora.txt
src/petra_domain/: __init__.py  about.md
src/petra_domain/entities/: __init__.py  anomaly.py  log_entry.py
src/petra_ifaces/cli/: commands.py
src/petra_infra/detectors/: ml_detector.py
src/petra_infra/parsers/: auth_log_parser.py
src/petra_model/application/: scan_service.py
tests/unit/app/: test_scan_service.py
tests/unit/domain/: test_log_entry.py
tests/unit/ifaces/: test_commands.py
tests/unit/infra/: test_anomaly.py  test_auth_log_parser.py  test_log_entry_parser.py  test_ml_detector.py
